# orca

./: .gitignore  Cargo.toml  LICENSE  Makefile.private.toml  Makefile.toml
backend/: Cargo.toml  Makefile.toml
backend/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  Makefile.toml  index.html
frontend/src/: app.rs  main.rs  name.rs
interface-derive/: Cargo.toml
interface-derive/src/: lib.rs
