[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.yew]
version = "0.19"

[dependencies.web-sys]
version = "0.3"

[dependencies.reqwasm]
version = "0.4"

[dependencies.wasm-bindgen-futures]
version = "0.4"

[dependencies.gloo-utils]
version = "0.1"

[dependencies.common]
path = "../common"
